--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 book:
-  title: "X"
+  title: "DS 2023 Final Project"
   author: "Kylie Stephens, Avalon Bennett, Will Wert" 
   favicon: logo.png
   description: "single line"
