--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ book:
   title: "DS 2023 Final Project"
   author: "Kylie Stephens, Avalon Bennett, Will Wert" 
   favicon: logo.png
-  description: "single line"
+  description: "Analyzing and Revamping ACLR Data"
   keyword: "data science, communicating, data visualization"
   url: "https://github.com/kyliestephens/DS2023_Final"
 
